@@ -229,6 +229,14 @@ below each thumbnail.
 .B -t, --thumbnails
 Same as Index mode, but the thumbnails are clickable image launchers.
 .TP 5
+.B --bg-tile FILE
+.B --bg-center FILE
+.B --bg-scale FILE
+.B --bg-seamless FILE
+Set your desktop background to FILE
+can use enlightenment IPC if you are running
+it, or will fall back to X methods.
+.TP 5
 .B -M, --menu-font FONT
 Use FONT for the font in menus.
 .TP 5
