@@ -62,6 +62,7 @@ struct __fehoptions
    unsigned char scale_down;
    unsigned char builtin_http;
    unsigned char wget_timestamp;
+   unsigned char bgmode;
 
    char *output_file;
    char *output_dir;
